build/log/idf_py_stderr_output_56212
Command: make -j 18 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Defaults policy: sdkconfig      
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src' belongs
  to component esp_wifi but is being used by component wpa_supplicant.  It is
  recommended to define the component dependency for wpa_supplicant on the
  component esp_wifi, i.e.  'idf_component_register(...  PRIV_REQUIRES
  esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component esp_wifi.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/wpa_supplicant/src' belongs to component
  wpa_supplicant but is being used by component esp_wifi.  It is recommended
  to define the component dependency for esp_wifi on the component
  wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/wpa_supplicant/esp_supplicant/src' belongs
  to component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


info: Default value for ESP_PERIPH_CTRL_FUNC_IN_IRAM in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
Configuration Report                                                                                                   
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
   Parser Version: 1                                                                                                   
   Verbosity: default                                                                                                  
   Defaults policy: sdkconfig                                                                                          
   Status: Finished with notifications                                                                                 
                                                                                                                       
  Default Value Mismatch                                                                                               
   ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────   
    Using sdkconfig default values                                                                                     
    Choice symbols with different default selection between sdkconfig and Kconfig                                      
    LIBC_STDIN_LINE_ENDING: Kconfig default selection: choice deselected, sdkconfig default selection:                 
    LIBC_STDIN_LINE_ENDING_CR                                                                                          
    LIBC_STDOUT_LINE_ENDING: Kconfig default selection: choice deselected, sdkconfig default selection:                
    LIBC_STDOUT_LINE_ENDING_CRLF                                                                                       
   ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────   
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c: In function 'publish_sensor_data_task':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:209:72: error: implicit declaration of function 'esp_timer_get_time'; did you mean 'timer_gettime'? [-Wimplicit-function-declaration]
  209 |                     AWS_IOT_CLIENT_ID, temperature, humidity, counter, esp_timer_get_time() / 1000);
      |                                                                        ^~~~~~~~~~~~~~~~~~
      |                                                                        timer_gettime
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:208:115: error: format '%lld' expects argument of type 'long long int', but argument 8 has type 'int' [-Werror=format=]
  208 |                     "{\"device_id\":\"%s\",\"temperature\":%.2f,\"humidity\":%.2f,\"counter\":%d,\"timestamp\":%lld}",
      |                                                                                                                ~~~^
      |                                                                                                                   |
      |                                                                                                                   long long int
      |                                                                                                                %d
  209 |                     AWS_IOT_CLIENT_ID, temperature, humidity, counter, esp_timer_get_time() / 1000);
      |                                                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~                 
      |                                                                                             |
      |                                                                                             int
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:91: esp-idf/main/CMakeFiles/__idf_main.dir/AWS_Wifi.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5944: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make[1]: ** Esperando que outros processos terminem.
make: *** [Makefile:136: all] Erro 2
